--- a/css/style.css
+++ b/css/style.css
@@ -70,16 +70,52 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
+.tplborder, .link-2 {
+  font-size: 100px;
+  border-bottom: 5px dashed red;
+}
+
+.link {
+  font-size: 100px;
+  border-bottom: 5px dashed green;
+}
+
 .block {
+  width: 31.25%;
+  background-color: #666;
   padding: 30px;
-  font-size: 20px;
-  line-height: 20px;
+  line-height: 60px;
 }
 
 .block span {
+  font-size: 50px;
   color: green;
 }
 
 .block .block__text {
-  font-size: 80px;
+  font-size: 50px;
+}
+
+.block.block--big {
+  font-size: 50px;
+}
+
+.link {
+  color: #000;
+  text-decoration: underline;
+  font-size: 50px;
+}
+
+.block .link {
+  font-size: 50px;
+}
+
+.link:hover {
+  color: #fff;
+}
+
+.link-2 {
+  font-size: 50px;
+  color: green;
+  border-bottom: 5px dashed #000;
 }
